--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   app:
     build: 
-      context: '../../mini-code'
-      dockerfile: mini-project/Dockerfile
+      context: ~/Documents/DEV/practice/serverless-api/mini-code
+      dockerfile: .devcontainer/Dockerfile
     container_name: mini-proj
     restart: unless-stopped
-    env_file: .env
+    env_file: mini-project/.env
     ports:
       - 3000:3000
     volumes:
@@ -26,7 +26,7 @@ services:
     restart: unless-stopped
     ports:
       - 5432:5432
-    env_file: .env
+    env_file: mini-project/.env
     volumes:
       - postgres_volume:/var/lib/postgres/data
     networks:
