Refactored prisma to DDD

--- a/mini-project/package.json
+++ b/mini-project/package.json
@@ -79,6 +79,6 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node src/infra/database/seeder/seed.ts"
   }
 }
