--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build: 
-      context: ~/Documents/DEV/practice/serverless-api/mini-code
+      context: .
       dockerfile: .devcontainer/Dockerfile
     container_name: mini-proj
     restart: unless-stopped
