--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       dockerfile: .devcontainer/Dockerfile
     container_name: mini-proj
     restart: unless-stopped
-    env_file: mini-project/.env
     ports:
       - 3000:3000
     volumes:
@@ -26,7 +25,13 @@ services:
     restart: unless-stopped
     ports:
       - 5432:5432
-    env_file: mini-project/.env
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DB=mini_db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=pass
+      - DIALECT=postgres
     volumes:
       - postgres_volume:/var/lib/postgres/data
     networks:
